--- a/index-ru.html
+++ b/index-ru.html
@@ -360,7 +360,7 @@
 			</div>
 			<div class="row text-center">
 				<div class="col">
-					<a href="#" class="github-pages">github.io</a>
+					<a href="https://samar-source.github.io/portfolio/" class="github-pages">portfolio.github.io</a>
 				</div>
 			</div>
 		</div>
