Added link for samar-resume

--- a/index-ru.html
+++ b/index-ru.html
@@ -360,7 +360,7 @@
 			</div>
 			<div class="row text-center">
 				<div class="col">
-					<a href="https://samar-source.github.io/portfolio/" class="github-pages">portfolio.github.io</a>
+					<a href="http://samartest.ru/portfolio/samar-resume/" class="github-pages" target="_blank">samar-resume.ru</a>
 				</div>
 			</div>
 		</div>
