--- a/index.html
+++ b/index.html
@@ -355,12 +355,12 @@
 			</div>
 			<div class="row text-center">
 				<div class="col">
-					<a href="mailto:vlad@htmlbook.ru?subject=Вопрос по портфолио" class="mail">samart.mail@yandex.ru</a>
+					<a href="mailto:vlad@htmlbook.ru?subject=Вопрос по портфолио" class="mail" >samart.mail@yandex.ru</a>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col">
-					<a href="https://samar-source.github.io/portfolio/" class="github-pages">portfolio.github.io</a>
+					<a href="http://samartest.ru/portfolio/samar-resume/" class="github-pages" target="_blank">samar-resume.ru</a>
 				</div>
 			</div>
 		</div>
