Added link for element in portfolio

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 										</div>
 										<div class="row justify-content-center text-center">
 											<div class="col-10 col-lg-4">
-												<a class="button-link" href="http://samartest.ru/vacuum-forming/index.html" target="_blank">Browse</a>
+												<a class="button-link" href="http://samartest.ru/portfolio/vacuum-forming/index.html" target="_blank">Browse</a>
 											</div>
 										</div>
 									</div>
