--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 			</div>
 			<div class="row text-center">
 				<div class="col">
-					<a href="mailto:vlad@htmlbook.ru?subject=Вопрос по портфолио" class="mail" >samart.mail@yandex.ru</a>
+					<a href="mailto:samart.mail@yandex.ru?subject=Вопрос по портфолио" class="mail" >samart.mail@yandex.ru</a>
 				</div>
 			</div>
 			<div class="row text-center">
@@ -380,15 +380,15 @@
 <!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-	<script type="text/javascript" src="lib/smoothScroll/js/SmoothScroll.js"></script>
+	<script src="lib/smoothScroll/js/SmoothScroll.js"></script>
 
-	<script type="text/javascript" src="lib/revealator/js/fm.revealator.jquery.js"></script>
+	<script src="lib/revealator/js/fm.revealator.jquery.js"></script>
 
-	<script type="text/javascript" src="lib/loadMoreResults/js/loadMoreResults.js"></script>
+	<script src="lib/loadMoreResults/js/loadMoreResults.js"></script>
 
-	<script type="text/javascript" src="lib/fancybox/js/jquery.fancybox.min.js"></script>
+	<script src="lib/fancybox/js/jquery.fancybox.min.js"></script>
 
-	<script type="text/javascript" src="js/script.js"></script>
+	<script src="js/script.js"></script>
 
 </body>
 </html>
