--- a/index.html
+++ b/index.html
@@ -165,6 +165,35 @@
 				<div class="col col-md-10 col-lg-12">
 					<div class="loadMore">
 						<div class="revealator-fade revealator-once item">
+							<h3 class="text-hidden">Сlient creation form</h3>
+							<div class="item-img" id="client-creation-form">
+								<div class="mask">
+									<div class="mask-box">
+										<div class="row justify-content-center text-center">
+											<div class="col">
+												<h3>Form for creating a new client</h3>
+											</div>
+										</div>
+										<div class="row justify-content-center text-center">
+											<div class="col col-lg-4">
+												<ul>
+													<li>HTML</li>
+													<li>Vue.js</li>
+													<li>Webpack</li>
+													<li>SASS</li> 
+												</ul>
+											</div>
+										</div>
+										<div class="row justify-content-center text-center">
+											<div class="col-10 col-lg-4">
+												<a class="button-link" href="https://samar-source.github.io/client-creation-form/" target="_blank">Browse</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="revealator-fade revealator-once item">
 							<h3 class="text-hidden">Landing page for makeup artist</h3>
 							<div class="item-img" id="makeup-artist">
 								<div class="mask">
@@ -178,7 +207,6 @@
 											<div class="col col-lg-4">
 												<ul>
 													<li>HTML</li>
-													<li>CSS</li>
 													<li>jQuery</li>
 													<li>Bootstrap</li>
 													<li>SASS</li>
@@ -187,7 +215,7 @@
 										</div>
 										<div class="row justify-content-center text-center">
 											<div class="col-10 col-lg-4">
-												<a class="button-link" href="http://samartest.ru/portfolio/makeup-artist/index.html" target="_blank">Browse</a>
+												<a class="button-link" href="https://samar-source.github.io/makeup-artist/" target="_blank">Browse</a>
 											</div>
 										</div>
 									</div>
@@ -217,7 +245,7 @@
 										</div>
 										<div class="row justify-content-center text-center">
 											<div class="col-10 col-lg-4">
-												<a class="button-link" href="http://samartest.ru/portfolio/web-development-project/index.html" target="_blank">Browse</a>
+												<a class="button-link" href="https://samar-source.github.io/web-development-project/" target="_blank">Browse</a>
 											</div>
 										</div>
 									</div>
@@ -245,7 +273,7 @@
 										</div>
 										<div class="row justify-content-center text-center">
 											<div class="col-10 col-lg-4">
-												<a class="button-link" href="http://samartest.ru/portfolio/singup-form/index.html" target="_blank">Browse</a>
+												<a class="button-link" href="https://samar-source.github.io/singup-form/">Browse</a>
 											</div>
 										</div>
 									</div>
@@ -273,7 +301,7 @@
 										</div>
 										<div class="row justify-content-center text-center">
 											<div class="col-10 col-lg-4">
-												<a class="button-link" href="http://samartest.ru/portfolio/example_page/index.html" target="_blank">Browse</a>
+												<a class="button-link" href="https://samar-source.github.io/example_page/" target="_blank">Browse</a>
 											</div>
 										</div>
 									</div>
@@ -301,7 +329,7 @@
 										</div>
 										<div class="row justify-content-center text-center">
 											<div class="col-10 col-lg-4">
-												<a class="button-link" href="http://samartest.ru/portfolio/vacuum-forming/index.html" target="_blank">Browse</a>
+												<a class="button-link" href="https://samar-source.github.io/vacuum-forming/" target="_blank">Browse</a>
 											</div>
 										</div>
 									</div>
