Deleted irrelevant data

--- a/index-ru.html
+++ b/index-ru.html
@@ -156,7 +156,7 @@
 			<div class="row justify-content-center">
 				<div class="col col-md-10 col-lg-12">
 					<h2 class="revealator-slideright revealator-once title">Портфолио</h2>
-					<a href="https://github.com/samar-source?tab=repositories" class="revealator-zoomin revealator-once icon-link" target="_blank">
+					<a href="https://github.com/samar-source?tab=repositories" class="revealator-zoomin revealator-once icon-link" title="Портфолио на GitHub" target="_blank">
 						<i class="icon-github"></i>
 					</a>
 				</div>
@@ -386,11 +386,12 @@
 					<a href="mailto:samart.mail@yandex.ru" class="mail">samart.mail@yandex.ru</a>
 				</div>
 			</div>
-			<div class="row text-center">
+			<!-- Портфолио на reg.ru -->
+			<!-- <div class="row text-center">
 				<div class="col">
 					<a href="http://samartest.ru/portfolio/samar-resume/" class="github-pages" target="_blank">samar-resume.ru</a>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</section>
 
