--- a/index-ru.html
+++ b/index-ru.html
@@ -12,7 +12,7 @@
 	<meta name="google" content="notranslate">
 	<meta name="format-detection" content="telephone=no">
 
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="img/favicon.svg" type="image/svg+xml">
 
 	<title>Портфолио Front-End разработчика</title>
 	
