--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="google" content="notranslate">
 	<meta name="format-detection" content="telephone=no">
 
-	<link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
+	<link rel="icon" href="img/favicon/favicon.ico?" type="image/x-icon">
 
 	<title>Portfolio Front-End developer</title>
 	
