--- a/index.html
+++ b/index.html
@@ -165,6 +165,36 @@
 				<div class="col col-md-10 col-lg-12">
 					<div class="loadMore">
 						<div class="revealator-fade revealator-once item">
+							<h3 class="text-hidden">Landing page for lorem Iprum</h3>
+							<div class="item-img" id="client-creation-form">
+								<div class="mask">
+									<div class="mask-box">
+										<div class="row justify-content-center text-center">
+											<div class="col">
+												<h3>Landing page for lorem Iprum</h3>
+											</div>
+										</div>
+										<div class="row justify-content-center text-center">
+											<div class="col col-lg-4">
+												<ul>
+													<li>HTML</li>
+													<li>npm</li>
+													<li>Gulp</li>
+													<li>JS</li>
+													<li>SASS</li> 
+												</ul>
+											</div>
+										</div>
+										<div class="row justify-content-center text-center">
+											<div class="col-10 col-lg-4">
+												<a class="button-link" href="https://samar-source.github.io/soft-corp/dist/index.html" target="_blank">Browse</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="revealator-fade revealator-once item">
 							<h3 class="text-hidden">Сlient creation form</h3>
 							<div class="item-img" id="client-creation-form">
 								<div class="mask">
