--- a/index-ru.html
+++ b/index-ru.html
@@ -166,7 +166,7 @@
 					<div class="loadMore">
 						<div class="revealator-fade revealator-once item">
 							<h3 class="text-hidden">Landing page for lorem Iprum</h3>
-							<div class="item-img" id="client-creation-form">
+							<div class="item-img" id="soft-corp">
 								<div class="mask">
 									<div class="mask-box">
 										<div class="row justify-content-center text-center">
